--- a/index.html
+++ b/index.html
@@ -160,8 +160,26 @@
             </div>
         </section>
         <!---->
-        <footer>
+    <footer>
+        <div>
             <p>Dwello</p>
+            <p>Bringing you closer to your dream home, one click at a time</p>
+                <ul class="footer-list">
+                    <li>About Us</li>
+                    <li>Contact</li>
+                    <li>Privacy Policy</li>
+                   <li>Terms of Service</li>
+                </ul>
+        </div>
+
+    
+ 
+    </footer>
+</body>
+</html>
+
+            </div>
+            
 
 
         </footer>
