--- a/index.html
+++ b/index.html
@@ -161,17 +161,45 @@
         </section>
         <!---->
     <footer>
-        <div>
+        <div class="block1">
             <p>Dwello</p>
             <p>Bringing you closer to your dream home, one click at a time</p>
                 <ul class="footer-list">
-                    <li>About Us</li>
-                    <li>Contact</li>
-                    <li>Privacy Policy</li>
-                   <li>Terms of Service</li>
+                    <li>About</li>
+                    <li>Our Story</li>
+                    <li>Careers</li>
+                   <li>Our Team</li>
+                   <li>Resources</li>
                 </ul>
         </div>
 
+        <div class="block2">
+            <ul class="footer-list">
+                <li>Support</li>
+                <li>FAQ</li>
+                <li>Connect Us</li>
+               <li>Help Center</li>
+               <li>Term of Services</li>
+
+        </div>
+
+        <div class="block3">
+            <ul class="footer-list">
+                <li>Find Us</li>
+                <li>Events</li>
+                <li>Locations</li>
+               <li>Newsletter</li>
+               
+
+        </div>
+
+        <div class="block4">
+            <ul class="footer-list">
+                <li>Our Social</li>
+                <li>Instagram</li>
+                <li>Facebook</li>
+               <li>Twitter</li>
+        </div>
     
  
     </footer>
